GZipped log file(s) prior to copying to target host